--- a/index.html
+++ b/index.html
@@ -67,116 +67,88 @@
     </style>
     <script>
         let exchangeRate = 5.56;
-        let packageQuantities = {
+        let cantidadesPaquete = {
             10: 0,
             30: 0,
             50: 0,
             100: 0
         };
 
-        const packagePrices = {
+        const preciosPaquete = {
             10: 7.30,
             30: 21.00,
             50: 35.00,
             100: 70.00
         };
 
-        function updatePackageQuantities(package, quantity) {
-            packageQuantities[package] = parseInt(quantity) || 0;
-            updatePackageTotals();
-            saveState();
+        function actualizarCantidadesPaquete(paquete, cantidad) {
+            cantidadesPaquete[paquete] = parseInt(cantidad) || 0;
+            actualizarTotalesPaquete();
         }
 
-        function updatePackageTotals() {
+        function actualizarTotalesPaquete() {
             let totalR = 0;
             let totalD = 0;
-            Object.keys(packageQuantities).forEach(pkg => {
-                const subtotalR = packageQuantities[pkg] * packagePrices[pkg] * exchangeRate;
-                const subtotalD = packageQuantities[pkg] * packagePrices[pkg];
-                document.getElementById(`totalR${pkg}`).innerText = subtotalR.toFixed(2);
-                document.getElementById(`totalD${pkg}`).innerText = subtotalD.toFixed(2);
+            Object.keys(cantidadesPaquete).forEach(paquete => {
+                const subtotalR = cantidadesPaquete[paquete] * preciosPaquete[paquete] * exchangeRate;
+                const subtotalD = cantidadesPaquete[paquete] * preciosPaquete[paquete];
+                document.getElementById(`totalR${paquete}`).innerText = subtotalR.toFixed(2);
+                document.getElementById(`totalD${paquete}`).innerText = subtotalD.toFixed(2);
                 totalR += subtotalR;
                 totalD += subtotalD;
             });
-            document.getElementById('totalRPackages').innerText = totalR.toFixed(2);
-            document.getElementById('totalDPackages').innerText = totalD.toFixed(2);
-            saveState();
+            document.getElementById('totalRPaquetes').innerText = totalR.toFixed(2);
+            document.getElementById('totalDPaquetes').innerText = totalD.toFixed(2);
         }
 
-        function copyToClipboard() {
-            const totalR = document.getElementById('totalRPackages').innerText;
-            const totalD = document.getElementById('totalDPackages').innerText;
-            const quantities = Object.keys(packageQuantities).map(pkg => `Paquete de $${pkg}: ${packageQuantities[pkg]}`).join('\n');
-            const textToCopy = `Total en R$: ${totalR}\nTotal en $: ${totalD}\n${quantities}`;
-            navigator.clipboard.writeText(textToCopy).then(() => {
+        function copiarAlPortapapeles() {
+            const totalR = document.getElementById('totalRPaquetes').innerText;
+            const totalD = document.getElementById('totalDPaquetes').innerText;
+            const cantidades = Object.keys(cantidadesPaquete).map(paquete => `Paquete de $${paquete}: ${cantidadesPaquete[paquete]}`).join('\n');
+            const textoACopiar = `Total en R$: ${totalR}\nTotal en $: ${totalD}\n${cantidades}`;
+            navigator.clipboard.writeText(textoACopiar).then(() => {
                 alert('¡Información copiada al portapapeles!');
             });
         }
-
-        function saveState() {
-            const state = {
-                exchangeRate,
-                packageQuantities,
-            };
-            localStorage.setItem('appState', JSON.stringify(state));
-        }
-
-        function loadState() {
-            const state = JSON.parse(localStorage.getItem('appState'));
-            if (state) {
-                exchangeRate = state.exchangeRate;
-                packageQuantities = state.packageQuantities;
-                updateDisplays();
-            }
-        }
-
-        function updateDisplays() {
-            Object.keys(packageQuantities).forEach(pkg => {
-                document.getElementById(`package${pkg}`).value = packageQuantities[pkg];
-            });
-            updatePackageTotals();
-        }
-
-        window.onload = loadState;
     </script>
 </head>
 <body>
     <div class="panel">
         <h2>Paquete de $10</h2>
-        <label for="package10">Cantidad:</label>
-        <input type="number" id="package10" value="0" oninput="updatePackageQuantities(10, this.value)"><br>
+        <label for="paquete10">Cantidad:</label>
+        <input type="number" id="paquete10" value="0" oninput="actualizarCantidadesPaquete(10, this.value)"><br>
         <p>Precio con descuento: $7.30</p>
         <p>Total: R$<span id="totalR10">0.00</span> / $<span id="totalD10">0.00</span></p>
     </div>
     <div class="panel">
         <h2>Paquete de $30</h2>
-        <label for="package30">Cantidad:</label>
-        <input type="number" id="package30" value="0" oninput="updatePackageQuantities(30, this.value)"><br>
+        <label for="paquete30">Cantidad:</label>
+        <input type="number" id="paquete30" value="0" oninput="actualizarCantidadesPaquete(30, this.value)"><br>
         <p>Precio con descuento: $21.00</p>
         <p>Total: R$<span id="totalR30">0.00</span> / $<span id="totalD30">0.00</span></p>
     </div>
     <div class="panel">
         <h2>Paquete de $50</h2>
-        <label for="package50">Cantidad:</label>
-        <input type="number" id="package50" value="0" oninput="updatePackageQuantities(50, this.value)"><br>
+        <label for="paquete50">Cantidad:</label>
+        <input type="number" id="paquete50" value="0" oninput="actualizarCantidadesPaquete(50, this.value)"><br>
         <p>Precio con descuento: $35.00</p>
         <p>Total: R$<span id="totalR50">0.00</span> / $<span id="totalD50">0.00</span></p>
     </div>
     <div class="panel">
         <h2>Paquete de $100</h2>
-        <label for="package100">Cantidad:</label>
-        <input type="number" id="package100" value="0" oninput="updatePackageQuantities(100, this.value)"><br>
+        <label for="paquete100">Cantidad:</label>
+        <input type="number" id="paquete100" value="0" oninput="actualizarCantidadesPaquete(100, this.value)"><br>
         <p>Precio con descuento: $70.00</p>
         <p>Total: R$<span id="totalR100">0.00</span> / $<span id="totalD100">0.00</span></p>
     </div>
     <div class="panel">
         <h2>Total de Todos los Paquetes</h2>
-        <p>Total: R$<span id="totalRPackages">0.00</span> / $<span id="totalDPackages">0.00</span></p>
-        <button onclick="copyToClipboard()">Copiar Total</button>
+        <p>Total: R$<span id="totalRPaquetes">0.00</span> / $<span id="totalDPaquetes">0.00</span></p>
+        <button onclick="copiarAlPortapapeles()">Copiar Total</button>
     </div>
     <div class="panel">
         <h2>Información de Pago</h2>
-        <p>Pix: MÓVIL 14988231270 Nombre: Victoria Stefany</p>
+        <p>Pix: TELÉFONO 14988231270 Nombre: Victoria Stefany</p>
         <p>Mercado Pago: <a href="https://link.mercadopago.com.br/ervindanada" target="_blank">enlace</a></p>
         <p>Binance: estrella203@hotmail.com</p>
     </div>
