--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <h2>Información de Pago</h2>
         <p>Pix: TELÉFONO 14988231270 Nombre: Victoria Stefany</p>
         <p>Mercado Pago: <a href="https://link.mercadopago.com.br/ervindanada" target="_blank">enlace</a></p>
-        <p>Binance: estrella203@hotmail.com</p>
+        <p>Binance: estrela203@hotmail.com</p>
     </div>
 </body>
 </html>
