--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
         }
     </style>
     <script>
-        let exchangeRate = 5.74;
-        let cantidadesPaquete = {
+        let exchangeRate = 5.75;
+        let pacoteQuantidades = {
             10: 0,
             30: 0,
             50: 0,
             100: 0
         };
 
-        const preciosPaquete = {
-            10: 7.30,
-            30: 21.00,
-            50: 35.00,
-            100: 70.00
+        const pacotePrecos = {
+            10: 7.50,
+            30: 22.50,
+            50: 37.50,
+            100: 75.00
         };
 
         function actualizarCantidadesPaquete(paquete, cantidad) {
