--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         }
     </style>
     <script>
-let tasaDeCambio = 5.75;
-let cantidadesPaquetes = {
+let exchangeRate = 5.75;
+let cantidadesPaquete = {
     10: 0,
     30: 0,
     50: 0,
     100: 0
 };
 
-const preciosPaquetes = {
+const preciosPaquete = {
     10: 7.50,
     30: 22.50,
     50: 37.50,
